final with distributive